--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Øystein sin mor</title>
+    <title>Hell yes scrolling</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
   </head>
   <body>
