--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
   </head>
   <body>
-    <script src="app.js"></script>
+    <script src="demo"></script>
   </body>
 </html>
